--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.7",
     "iron-image": "PolymerElements/iron-image#2.0-preview",
     "paper-card": "PolymerElements/paper-card#2.0-preview",
-    "google-youtube": "GoogleWebComponents/google-youtube#2.0-preview"
+    "google-youtube": "GoogleWebComponents/google-youtube#2.0-preview",
+    "paper-input": "PolymerElements/paper-input#2.0-preview"
   },
   "resolutions": {
     "polymer": "^2.0.0-rc.3"
