--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "paper-card": "PolymerElements/paper-card#2.0-preview",
     "google-youtube": "GoogleWebComponents/google-youtube#2.0-preview",
     "paper-input": "PolymerElements/paper-input#2.0-preview",
-    "platinum-sw": "PolymerElements/platinum-sw#2.0-preview"
+    "platinum-sw": "PolymerElements/platinum-sw#2.0-preview",
+    "paper-styles": "PolymerElements/paper-styles#2.0-preview"
   },
   "resolutions": {
     "polymer": "^2.0.0-rc.3"
