--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ripage Web",
-  "short_name": "Ripage",
+  "name": "The Ripage",
+  "short_name": "The Ripage",
   "start_url": "./?homescreen=1",
   "display": "standalone",
   "theme_color": "#3f51b5",
