--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "paper-input": "PolymerElements/paper-input#2.0-preview",
     "paper-styles": "PolymerElements/paper-styles#2.0-preview",
     "paper-item": "PolymerElements/paper-item#2.0-preview",
-    "paper-listbox": "PolymerElements/paper-listbox#2.0-preview"
+    "paper-listbox": "PolymerElements/paper-listbox#2.0-preview",
+    "neon-animation": "PolymerElements/neon-animation#2.0-preview"
   },
   "resolutions": {
     "polymer": "^2.0.0-rc.3"
