--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "paper-styles": "PolymerElements/paper-styles#2.0-preview",
     "paper-item": "PolymerElements/paper-item#2.0-preview",
     "paper-listbox": "PolymerElements/paper-listbox#2.0-preview",
-    "neon-animation": "PolymerElements/neon-animation#2.0-preview"
+    "neon-animation": "PolymerElements/neon-animation#2.0-preview",
+    "web-animations-js": "^2.3.1"
   },
   "resolutions": {
     "polymer": "^2.0.0-rc.3"
